made some styling changes

--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -13,7 +13,7 @@
   <header>
     <h1>Meathead</h1>
     <h2 id = "headerWeekNumber"></h2>
-    <nav class="navbar navbar-expand" style="background-color: #77f2fd;">
+    <nav class="navbar navbar-expand" id="navDropDown">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
@@ -43,96 +43,6 @@
 
     <div class="container text-left"  style="padding: 20px 9px 30px; align-items: center;" id="bigContainer">
       <div class="row" id="appendHere">   
-        <!-- <div class="col-4"
-          <div class="card"
-            <div class="card-body"              
-              <div class="container" id="border"           
-                <!-- Top row Day and Timer--
-                <div class="row">
-                  <div class="col-4" id="vertRightBorder">
-                    <h1 id="dayTimer">Day 1</h1>
-                  </div>     
-                  <div class="col" id="vertLeftBorder">
-                    <div class="row">
-                      <div class="col">
-                        <h1 id="dayTimer">Timer:</h1>
-                      </div>
-                      <div class="col">
-                        <p id = "timer">1:00</p>
-                      </div>
-                    </div>
-                  </div>       
-                </div>
-                <!--^^ Top row Day and Timer ^^--
-                <!-- Buttons Grid --
-                <div class="container text-center" id="cardContent">
-                  <div class ="focusExerciseSection" class="row gx-5" id="buttonGridTop">
-                    <div class="col">
-                      <button type="button" class = "focusExerciseSetAdviceButton"
-                      id = "focusExerciseSetAdviceButton"
-                      class="btn btn-primary btn-lg">Button 1</button>
-                    </div>
-                    <div class="col">
-                      <button type="button" class = "focusExerciseSetAdviceButton"
-                      class="btn btn-primary btn-lg">Button 2</button>
-                    </div>
-                    <div class="col">Column</div>
-                    <div class="col">Column</div>
-                  </div>
-
-                  <div class="row gx-5" id="buttonGridBottom">
-                    <div class="col">Column</div>
-                    <div class="col">Column</div>
-                    <div class="col">Column</div>
-                    <div class="col">Column</div>
-                  </div>
-                  <!--^^ Buttons Grid ^^--
-                  <!-- Notes --
-                  <form class="row gx-2 align-items-center" id="notesForm">
-                    <div class="col align-items-center">                      
-                      <label for="notes" id="noteSize">Notes</label>                        
-                      <textarea class="form-control" id="notes"></textarea>                        
-                    </div>
-                  </form>
-                  <!--^^ Notes ^^-- 
-                  <!-- Accessory --  
-                  <div class="row justify-content-md-center" id="accessoryGridTop">
-                    Accessory Exercises
-                  </div>
-
-                  <div class="row gx-5" id="accessoryGridBottom">
-                    <div class="col">
-                      <button type="button" class = "accessoryExerciseSetAdviceButton"
-                      id = "accessoryExerciseSetAdviceButton" class="btn btn-primary btn-lg">Example</button>
-                    </div>
-                    <div class="col">Column</div>
-                    <div class="col">Column</div>
-                    <div class="col">Column</div>
-                  </div>  
-                  <!--^^ Accessory ^^--
-                  <!-- Cardio --
-                  <form class="row justify-content-md-center" id="cardioForm">
-                    <div class="col-6">
-                      <div class="row g-0 justify-content-md-center">
-                        <label for="cardio" class="col" style="font-size: 35px;">Cardio</label>
-                        <button type="button" class="btn btn-outline-primary" id="cardio">Something</button>                       
-                      </div>
-                    </div>
-                  </form> 
-                  <!--^^ Cardio ^^-- 
-                  <!-- Complete Button -- 
-                  <div class="row justify-content-md-center" id="complete">
-                    <div class="col-70">
-                      <button type="button" class="btn btn-primary btn-lg">Complete</button>
-                    </div>                
-                  </div> 
-                  <!--^^ Complete Button ^^--                 
-                </div>
-              </div>
-            </div>
-          </div>          
-        </div>
- -->
       </div>
     </div>
   </main>
