--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -14,7 +14,7 @@
     <h1>Meathead</h1>
     <h2 id = "headerWeekNumber"></h2>
     <nav class="navbar navbar-expand" id="navDropDown">
-      <div class="container-fluid">
+      <!-- <div class="container-fluid"> -->
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -31,17 +31,15 @@
             </li>
           </ul>
         </div>
-      </div>
+      <!-- </div> -->
     </nav>
   </header>
   <main>
-    <div class="container-fluid" style="padding: 20px 9px 30px; margin: 0px 0px 0px; border: 0px;">
+    <div class="container-fluid">
       <h3 id = "headerUserName"></h3>
       <h4>When you're done with a set, click that button to start your rest timer!</h4>
     </div>
-    
-
-    <div class="container text-left"  style="padding: 20px 9px 30px; align-items: center;" id="bigContainer">
+    <div class="containerTextLeft" class ="container text-left" id="bigContainer">
       <div class="row" id="appendHere">   
       </div>
     </div>
@@ -49,10 +47,6 @@
   <footer>
   </footer>
 </body>
-
-<!-- Off canvas -->
-
-<!-- ^^ Off canvas ^^ -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="assets/js/basicScript.js"></script>
 <script src="assets/js/weekScript.js"></script>
